Finally got the stupid share action to work (3.13)

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -8,5 +8,7 @@
         android:title="@string/action_settings"
         app:showAsAction="never" />
 
-
+    <item android:id="@+id/action_map"
+        android:title="View location on map"
+        app:showAsAction="never"/>
 </menu>
