--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -7,10 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="16dp"
         tools:context="com.example.android.sunshine.app.DetailActivity.DetailFragment">
 
 
@@ -26,13 +23,15 @@
             <TextView
                 android:id="@+id/detail_item_friendly_date_textview"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text="Today"/>
 
             <TextView
                 android:id="@+id/detail_item_date_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingBottom="24dp" />
+                android:paddingBottom="24dp"
+                android:text="Tuesday, May 23rd"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -51,13 +50,15 @@
                         android:id="@+id/detail_item_high_textview"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="8dp" />
+                        android:padding="8dp"
+                        android:text="88 degrees"/>
 
                     <TextView
                         android:id="@+id/detail_item_low_textview"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="8dp" />
+                        android:padding="8dp"
+                        android:text="42 degrees"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -77,7 +78,8 @@
                         android:id="@+id/detail_item_forecast_textview"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal" />
+                        android:layout_gravity="center_horizontal"
+                        android:text="clear"/>
                 </LinearLayout>
 
 
@@ -88,20 +90,23 @@
                 android:id="@+id/detail_item_humidity_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="8dp" />
+                android:padding="8dp"
+                android:text="real humid"/>
 
             <TextView
                 android:id="@+id/detail_wind_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="8dp" />
+                android:padding="8dp"
+                android:text="real windy"/>
 
 
             <TextView
                 android:id="@+id/detail_pressure_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="8dp" />
+                android:padding="8dp"
+                android:text="super pressury"/>
 
         </LinearLayout>
 
