--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -7,18 +7,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:paddingLeft="16dp"
+        android:paddingStart="16dp"
+        android:paddingTop="16dp">
 
         <TextView
             android:id="@+id/detail_item_friendly_date_textview"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:fontFamily="sans-serif-condensed"
+            android:textColor="@android:color/black"/>
 
         <TextView
             android:id="@+id/detail_item_date_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingBottom="24dp" />
+            android:paddingTop="8dp"
+            android:paddingBottom="24dp"
+            android:textSize="16sp"
+            android:textColor="#646464"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -36,12 +44,19 @@
                 <TextView
                     android:id="@+id/detail_item_high_textview"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:textSize="96sp"
+                    android:textColor="@android:color/black"
+                    android:fontFamily="sans-serif-condensed"
+                    android:layout_gravity="center"/>
 
                 <TextView
                     android:id="@+id/detail_item_low_textview"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:textSize="48sp"
+                    android:fontFamily="sans-serif-condensed"
+                    android:layout_gravity="center"/>
             </LinearLayout>
 
             <LinearLayout
@@ -54,12 +69,16 @@
                 <ImageView
                     android:id="@+id/detail_item_icon"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"/>
 
                 <TextView
                     android:id="@+id/detail_item_forecast_textview"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@android:style/TextAppearance.Large"
+                    android:textColor="#646464"
+                    android:layout_gravity="center"/>
             </LinearLayout>
         </LinearLayout>
 
@@ -67,17 +86,23 @@
         <TextView
             android:id="@+id/detail_item_humidity_textview"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:textAppearance="@android:style/TextAppearance.Large"/>
 
         <TextView
             android:id="@+id/detail_wind_textview"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:textAppearance="@android:style/TextAppearance.Large"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
+            />
 
         <TextView
             android:id="@+id/detail_pressure_textview"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textAppearance="@android:style/TextAppearance.Large" />
 
     </LinearLayout>
 
