--- a/app/src/main/res/layout/fragment_detail_wide.xml
+++ b/app/src/main/res/layout/fragment_detail_wide.xml
@@ -18,13 +18,18 @@
             <TextView
                 android:id="@+id/detail_item_friendly_date_textview"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-condensed"
+                android:textColor="@android:color/black"
+                android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/detail_item_date_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingBottom="24dp" />
+                android:paddingBottom="24dp"
+                android:textColor="@color/grey_700"
+                android:textSize="20sp" />
 
         </LinearLayout>
 
@@ -38,28 +43,43 @@
             <TextView
                 android:id="@+id/detail_item_high_textview"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-light"
+                android:textColor="@android:color/black"
+                android:textSize="96sp"
+                android:layout_gravity="end"/>
 
             <TextView
                 android:id="@+id/detail_item_low_textview"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-light"
+                android:textSize="48sp"
+                android:layout_gravity="end"/>
 
             <!-- Humidity, wind, pressure -->
             <TextView
                 android:id="@+id/detail_item_humidity_textview"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-condensed"
+                android:textAppearance="@android:style/TextAppearance.Large" />
 
             <TextView
                 android:id="@+id/detail_wind_textview"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-condensed"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:textAppearance="@android:style/TextAppearance.Large" />
 
             <TextView
                 android:id="@+id/detail_pressure_textview"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-condensed"
+                android:textAppearance="@android:style/TextAppearance.Large" />
         </LinearLayout>
 
         <LinearLayout
@@ -70,13 +90,15 @@
 
             <ImageView
                 android:id="@+id/detail_item_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_width="144dp"
+                android:layout_height="144dp" />
 
             <TextView
                 android:id="@+id/detail_item_forecast_textview"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textAppearance="@android:style/TextAppearance.Large"
+                android:fontFamily="sans-serif-condensed"/>
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
