Finished ability to add icon packs

--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -7,12 +7,11 @@
 
     <com.example.android.sunshine.app.LocationEditTextPreference
         android:defaultValue="@string/pref_location_default"
-        android:title="@string/pref_location_label"
-        android:key="@string/pref_location_key"
         android:inputType="text"
+        android:key="@string/pref_location_key"
         android:singleLine="true"
-        custom:minLength="3"
-        />
+        android:title="@string/pref_location_label"
+        custom:minLength="3" />
 
 
     <ListPreference
@@ -28,5 +27,13 @@
         android:summaryOff="@string/pref_enable_notifications_false"
         android:summaryOn="@string/pref_enable_notifications_true"
         android:title="@string/pref_enable_notifications_label" />
+
+    <ListPreference
+        android:defaultValue="@string/pref_art_pack_sunshine"
+        android:entries="@array/pref_art_pack_options"
+        android:entryValues="@array/pref_art_pack_values"
+        android:key="@string/pref_art_pack_key"
+        android:title="@string/pref_art_pack_label" />
+
 
 </PreferenceScreen>
