Fully functional 6.12. Had to add a scroll view to the detail_extras_grid in order to render the compass

--- a/app/src/main/res/values-sw600dp-land/refs.xml
+++ b/app/src/main/res/values-sw600dp-land/refs.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="fragment_detail_start" type="layout">@layout/fragment_detail_twopane</item>
+    <item type="layout" name="fragment_detail_start">@layout/fragment_detail_twopane</item>
 </resources>
+
 
