--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -1,98 +1,11 @@
-<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--xmlns:tools="http://schemas.android.com/tools"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:orientation="vertical">-->
-
-    <!--<LinearLayout-->
-        <!--android:id="@+id/appbar"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:background="?attr/colorPrimary"-->
-        <!--android:elevation="@dimen/appbar_elevation"-->
-        <!--android:orientation="vertical">-->
-
-
-        <!--<android.support.v7.widget.Toolbar-->
-            <!--android:id="@+id/toolbar"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="?attr/actionBarSize"-->
-            <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />-->
-
-        <!--&lt;!&ndash; These FrameLayouts are only there to line the image up with the keyline correctly, since-->
-             <!--we cannot do addition of dimensions/attributes otherwise &ndash;&gt;-->
-        <!--<FrameLayout-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginLeft="@dimen/abc_list_item_padding_horizontal_material"-->
-            <!--android:layout_marginStart="@dimen/abc_list_item_padding_horizontal_material">-->
-
-            <!--<FrameLayout-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginLeft="@dimen/list_icon"-->
-                <!--android:layout_marginStart="@dimen/list_icon"-->
-                <!--android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"-->
-                <!--android:paddingStart="@dimen/abc_list_item_padding_horizontal_material">-->
-
-
-                <!--<ImageView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="?attr/listPreferredItemHeight"-->
-                    <!--android:layout_gravity="center_vertical"-->
-                    <!--android:contentDescription="@string/app_name"-->
-                    <!--android:src="@drawable/ic_logo" />-->
-            <!--</FrameLayout>-->
-        <!--</FrameLayout>-->
-    <!--</LinearLayout>-->
-
-
-    <!--&lt;!&ndash; This is used as a strut to create two columns in our RelativeLayout &ndash;&gt;-->
-    <!--<android.support.v4.widget.Space-->
-        <!--android:id="@+id/layout_center"-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_height="0dp"-->
-        <!--android:layout_centerInParent="true" />-->
-
-    <!--<fragment-->
-        <!--android:id="@+id/fragment_forecast"-->
-        <!--android:name="com.example.android.sunshine.app.ForecastFragment"-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:layout_alignEnd="@id/layout_center"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:layout_alignRight="@id/layout_center"-->
-        <!--android:layout_below="@id/appbar"-->
-        <!--tools:layout="@android:layout/list_content" />-->
-
-    <!--&lt;!&ndash; We set elevation here only so the detail view doesn't get occluded-->
-         <!--by the AppBar &ndash;&gt;-->
-
-    <!--<FrameLayout-->
-        <!--android:id="@+id/weather_detail_container"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:layout_alignLeft="@id/layout_center"-->
-        <!--android:layout_alignParentEnd="true"-->
-        <!--android:layout_alignParentRight="true"-->
-        <!--android:layout_alignStart="@id/layout_center"-->
-        <!--android:layout_marginTop="?attr/actionBarSize"-->
-        <!--android:elevation="@dimen/appbar_elevation"-->
-        <!--android:layout_marginRight="@dimen/list_item_extra_padding"-->
-        <!--android:paddingBottom="@dimen/detail_container_bottom_margin"-->
-        <!--android:paddingEnd="@dimen/abc_list_item_padding_horizontal_material"-->
-        <!--android:paddingRight="@dimen/abc_list_item_padding_horizontal_material" />-->
-<!--</RelativeLayout>-->
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -105,33 +18,34 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-        <!-- These FrameLayouts are only there to line the image up with the keyline correctly, since
-             we cannot do addition of dimensions/attributes otherwise -->
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <!-- This Space is only there to line the image up with the
+             keyline correctly, since we cannot do addition of
+             dimensions/attributes otherwise -->
+        <android.support.v4.widget.Space
+            android:id="@+id/sunshineLogoAlign"
+            android:layout_width="@dimen/list_icon"
+            android:layout_height="0dp"
             android:layout_marginLeft="@dimen/abc_list_item_padding_horizontal_material"
             android:layout_marginStart="@dimen/abc_list_item_padding_horizontal_material"
-            >
-            <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/list_icon"
-                android:layout_marginStart="@dimen/list_icon"
-                android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
-                android:paddingStart="@dimen/abc_list_item_padding_horizontal_material">
+            android:layout_alignParentLeft="true"
+            android:layout_below="@id/toolbar"/>
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="?attr/listPreferredItemHeight"
-                    android:layout_gravity="center_vertical"
-                    android:src="@drawable/ic_logo"
-                    android:contentDescription="@string/app_name"/>
-            </FrameLayout>
-        </FrameLayout>
-    </LinearLayout>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="?attr/listPreferredItemHeight"
+            android:layout_gravity="center_vertical"
+            android:layout_below="@id/sunshineLogoAlign"
+            android:layout_marginLeft="@dimen/abc_list_item_padding_horizontal_material"
+            android:layout_marginStart="@dimen/abc_list_item_padding_horizontal_material"
+            android:layout_toRightOf="@id/sunshineLogoAlign"
+            android:src="@drawable/ic_logo"
+            android:contentDescription="@string/app_name"/>
+    </RelativeLayout>
 
     <!-- This is used as a strut to create two columns in our RelativeLayout -->
     <android.support.v4.widget.Space
@@ -153,8 +67,8 @@
         tools:layout="@android:layout/list_content" />
 
     <!-- This is used to give the card the appropriate margin
-           list_item_extra_padding +
-           abc_list_item_padding_horizontal_material -->
+         list_item_extra_padding +
+         abc_list_item_padding_horizontal_material -->
     <android.support.v7.widget.Space
         android:id="@+id/cardviewAligner"
         android:layout_width="match_parent"
