--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -1,10 +1,4 @@
 <resources>
-    <!-- Extra List Item Margin (tablet-only) -->
-    <dimen name="list_item_extra_padding">64dp</dimen>
-    <dimen name="detail_view_padding_vertical">@dimen/abc_list_item_padding_horizontal_material</dimen>
-    <dimen name="detail_view_padding">@dimen/abc_action_bar_default_height_material</dimen>
-
-    <dimen name="forecast_temperature_space">@dimen/abc_list_item_padding_horizontal_material</dimen>
-    <dimen name="detail_container_bottom_margin">@dimen/abc_action_bar_default_height_material</dimen>
-
+    <!-- Extra Padding - This one actually smaller on tablets -->
+    <dimen name="detail_view_extra_padding">0dp</dimen>
 </resources>
