Place picker is now not working- this is the error I get
Process: com.example.android.sunshine.app, PID: 6190
                                                 android.database.CursorIndexOutOfBoundsException: Index 0 requested, with a size of 0
                                                     at android.database.AbstractCursor.checkPosition(AbstractCursor.java:460)
                                                     at android.database.AbstractWindowedCursor.checkPosition(AbstractWindowedCursor.java:136)
                                                     at android.database.AbstractWindowedCursor.getString(AbstractWindowedCursor.java:50)
                                                     at android.database.CursorWrapper.getString(CursorWrapper.java:137)
                                                     at com.example.android.sunshine.app.ForecastFragment.openPreferredLocationInMap(ForecastFragment.java:269)
                                                     at com.example.android.sunshine.app.ForecastFragment.onOptionsItemSelected(ForecastFragment.java:135)

--- a/app/src/main/res/layout/pref_current_location.xml
+++ b/app/src/main/res/layout/pref_current_location.xml
@@ -10,6 +10,6 @@
         android:src="@drawable/ic_current_location"
         android:layout_gravity="end|center_vertical"
         android:contentDescription="@string/pref_current_location_desc"
-        android:tint="@color/material_deep_teal_500"/>
+        android:tint="@color/accent"/>
 
 </FrameLayout>
